--- a/UrbanDjango/templates/third_task/games.html
+++ b/UrbanDjango/templates/third_task/games.html
@@ -8,7 +8,7 @@
     <h1>Игры</h1>
     <ul>
         <li>Atomic Heart<button>Купить</button></li>
-        <li>Mario<button>Купить</button></li>
+        <li>Cyberpunk 2077<button>Купить</button></li>
         <li>GTA<button>Купить</button></li>
     </ul>
     <button onclick="location.href='/platform'">Вернуться обратно</button>
